// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HourlyWeatherContainer component tests snapshot with a spinner 1`] = `
<section
  class="hourly-weather__section hourly-weather-section test-class"
  data-testid="hourly-weather"
>
  <h2
    class="hourly-weather-section__title sr-only"
  >
    Погода на ближайщие 24 часа
  </h2>
  <div
    aria-label="loading spinner"
    class="spinner "
    style="--size: 207px;"
    title="loading spinner"
  >
    <div
      class="spinner__ring"
      style="--ring-size: 165.60000000000002px;"
    />
    <div
      class="spinner__ring"
      style="--ring-size: 165.60000000000002px;"
    />
    <div
      class="spinner__ring"
      style="--ring-size: 165.60000000000002px;"
    />
    <div
      class="spinner__ring"
      style="--ring-size: 165.60000000000002px;"
    />
  </div>
</section>
`;

exports[`HourlyWeatherContainer component tests snapshot with mock data 1`] = `
<section
  class="hourly-weather__section hourly-weather-section test-class"
  data-testid="hourly-weather"
>
  <h2
    class="hourly-weather-section__title sr-only"
  >
    Погода на ближайщие 24 часа
  </h2>
  <div
    class="table-overlay "
    data-testid=""
  >
    <div
      class="table-container"
    >
      <table
        class="table"
      >
        <thead
          class="table__head"
        >
          <tr
            class="table__row"
          >
            <th
              class="table__head-cell"
            >
              9:00
            </th>
            <th
              class="table__head-cell"
            >
              10:00
            </th>
            <th
              class="table__head-cell"
            >
              11:00
            </th>
            <th
              class="table__head-cell"
            >
              12:00
            </th>
            <th
              class="table__head-cell"
            >
              13:00
            </th>
            <th
              class="table__head-cell"
            >
              14:00
            </th>
            <th
              class="table__head-cell"
            >
              15:00
            </th>
            <th
              class="table__head-cell"
            >
              16:00
            </th>
            <th
              class="table__head-cell"
            >
              17:00
            </th>
            <th
              class="table__head-cell"
            >
              18:00
            </th>
            <th
              class="table__head-cell"
            >
              19:00
            </th>
            <th
              class="table__head-cell"
            >
              20:00
            </th>
            <th
              class="table__head-cell"
            >
              21:00
            </th>
            <th
              class="table__head-cell"
            >
              22:00
            </th>
            <th
              class="table__head-cell"
            >
              23:00
            </th>
            <th
              class="table__head-cell"
            >
              0:00
            </th>
            <th
              class="table__head-cell"
            >
              1:00
            </th>
            <th
              class="table__head-cell"
            >
              2:00
            </th>
            <th
              class="table__head-cell"
            >
              3:00
            </th>
            <th
              class="table__head-cell"
            >
              4:00
            </th>
            <th
              class="table__head-cell"
            >
              5:00
            </th>
            <th
              class="table__head-cell"
            >
              6:00
            </th>
            <th
              class="table__head-cell"
            >
              7:00
            </th>
            <th
              class="table__head-cell"
            >
              8:00
            </th>
          </tr>
        </thead>
        <tbody
          class="table__body"
        >
          <tr
            class="table__row"
          >
            <td
              class="table__data-cell"
            >
              <div
                class="hourly-weather "
                data-testid=""
              >
                <img
                  alt="ясно"
                  class="hourly-weather__icon"
                  src="/assets/icons/sunny.svg"
                />
                <p
                  class="hourly-weather__temperature"
                >
                  -4.5
                  °
                </p>
                <p
                  class="hourly-weather__status"
                >
                  ясно
                </p>
              </div>
            </td>
            <td
              class="table__data-cell"
            >
              <div
                class="hourly-weather "
                data-testid=""
              >
                <img
                  alt="пасмурно"
                  class="hourly-weather__icon"
                  src="/assets/icons/cloudy.svg"
                />
                <p
                  class="hourly-weather__temperature"
                >
                  -4.4
                  °
                </p>
                <p
                  class="hourly-weather__status"
                >
                  пасмурно
                </p>
              </div>
            </td>
            <td
              class="table__data-cell"
            >
              <div
                class="hourly-weather "
                data-testid=""
              >
                <img
                  alt="пасмурно"
                  class="hourly-weather__icon"
                  src="/assets/icons/cloudy.svg"
                />
                <p
                  class="hourly-weather__temperature"
                >
                  -4.3
                  °
                </p>
                <p
                  class="hourly-weather__status"
                >
                  пасмурно
                </p>
              </div>
            </td>
            <td
              class="table__data-cell"
            >
              <div
                class="hourly-weather "
                data-testid=""
              >
                <img
                  alt="снег"
                  class="hourly-weather__icon"
                  src="/assets/icons/snow.svg"
                />
                <p
                  class="hourly-weather__temperature"
                >
                  -4.5
                  °
                </p>
                <p
                  class="hourly-weather__status"
                >
                  снег
                </p>
              </div>
            </td>
            <td
              class="table__data-cell"
            >
              <div
                class="hourly-weather "
                data-testid=""
              >
                <img
                  alt="снег"
                  class="hourly-weather__icon"
                  src="/assets/icons/snow.svg"
                />
                <p
                  class="hourly-weather__temperature"
                >
                  -5.1
                  °
                </p>
                <p
                  class="hourly-weather__status"
                >
                  снег
                </p>
              </div>
            </td>
            <td
              class="table__data-cell"
            >
              <div
                class="hourly-weather "
                data-testid=""
              >
                <img
                  alt="пасмурно"
                  class="hourly-weather__icon"
                  src="/assets/icons/cloudy.svg"
                />
                <p
                  class="hourly-weather__temperature"
                >
                  -5.6
                  °
                </p>
                <p
                  class="hourly-weather__status"
                >
                  пасмурно
                </p>
              </div>
            </td>
            <td
              class="table__data-cell"
            >
              <div
                class="hourly-weather "
                data-testid=""
              >
                <img
                  alt="пасмурно"
                  class="hourly-weather__icon"
                  src="/assets/icons/cloudy.svg"
                />
                <p
                  class="hourly-weather__temperature"
                >
                  -5.8
                  °
                </p>
                <p
                  class="hourly-weather__status"
                >
                  пасмурно
                </p>
              </div>
            </td>
            <td
              class="table__data-cell"
            >
              <div
                class="hourly-weather "
                data-testid=""
              >
                <img
                  alt="пасмурно"
                  class="hourly-weather__icon"
                  src="/assets/icons/cloudy.svg"
                />
                <p
                  class="hourly-weather__temperature"
                >
                  -6
                  °
                </p>
                <p
                  class="hourly-weather__status"
                >
                  пасмурно
                </p>
              </div>
            </td>
            <td
              class="table__data-cell"
            >
              <div
                class="hourly-weather "
                data-testid=""
              >
                <img
                  alt="пасмурно"
                  class="hourly-weather__icon"
                  src="/assets/icons/cloudy.svg"
                />
                <p
                  class="hourly-weather__temperature"
                >
                  -6.5
                  °
                </p>
                <p
                  class="hourly-weather__status"
                >
                  пасмурно
                </p>
              </div>
            </td>
            <td
              class="table__data-cell"
            >
              <div
                class="hourly-weather "
                data-testid=""
              >
                <img
                  alt="пасмурно"
                  class="hourly-weather__icon"
                  src="/assets/icons/cloudy.svg"
                />
                <p
                  class="hourly-weather__temperature"
                >
                  -6.8
                  °
                </p>
                <p
                  class="hourly-weather__status"
                >
                  пасмурно
                </p>
              </div>
            </td>
            <td
              class="table__data-cell"
            >
              <div
                class="hourly-weather "
                data-testid=""
              >
                <img
                  alt="ясно"
                  class="hourly-weather__icon"
                  src="/assets/icons/sunny.svg"
                />
                <p
                  class="hourly-weather__temperature"
                >
                  -7
                  °
                </p>
                <p
                  class="hourly-weather__status"
                >
                  ясно
                </p>
              </div>
            </td>
            <td
              class="table__data-cell"
            >
              <div
                class="hourly-weather "
                data-testid=""
              >
                <img
                  alt="пасмурно"
                  class="hourly-weather__icon"
                  src="/assets/icons/cloudy.svg"
                />
                <p
                  class="hourly-weather__temperature"
                >
                  -6.4
                  °
                </p>
                <p
                  class="hourly-weather__status"
                >
                  пасмурно
                </p>
              </div>
            </td>
            <td
              class="table__data-cell"
            >
              <div
                class="hourly-weather "
                data-testid=""
              >
                <img
                  alt="снег"
                  class="hourly-weather__icon"
                  src="/assets/icons/snow.svg"
                />
                <p
                  class="hourly-weather__temperature"
                >
                  -5.3
                  °
                </p>
                <p
                  class="hourly-weather__status"
                >
                  снег
                </p>
              </div>
            </td>
            <td
              class="table__data-cell"
            >
              <div
                class="hourly-weather "
                data-testid=""
              >
                <img
                  alt="дождь"
                  class="hourly-weather__icon"
                  src="/assets/icons/rain.svg"
                />
                <p
                  class="hourly-weather__temperature"
                >
                  -4.3
                  °
                </p>
                <p
                  class="hourly-weather__status"
                >
                  дождь
                </p>
              </div>
            </td>
            <td
              class="table__data-cell"
            >
              <div
                class="hourly-weather "
                data-testid=""
              >
                <img
                  alt="ясно"
                  class="hourly-weather__icon"
                  src="/assets/icons/sunny.svg"
                />
                <p
                  class="hourly-weather__temperature"
                >
                  -3.6
                  °
                </p>
                <p
                  class="hourly-weather__status"
                >
                  ясно
                </p>
              </div>
            </td>
            <td
              class="table__data-cell"
            >
              <div
                class="hourly-weather "
                data-testid=""
              >
                <img
                  alt="ясно"
                  class="hourly-weather__icon"
                  src="/assets/icons/sunny.svg"
                />
                <p
                  class="hourly-weather__temperature"
                >
                  -3.4
                  °
                </p>
                <p
                  class="hourly-weather__status"
                >
                  ясно
                </p>
              </div>
            </td>
            <td
              class="table__data-cell"
            >
              <div
                class="hourly-weather "
                data-testid=""
              >
                <img
                  alt="пасмурно"
                  class="hourly-weather__icon"
                  src="/assets/icons/cloudy.svg"
                />
                <p
                  class="hourly-weather__temperature"
                >
                  -3.7
                  °
                </p>
                <p
                  class="hourly-weather__status"
                >
                  пасмурно
                </p>
              </div>
            </td>
            <td
              class="table__data-cell"
            >
              <div
                class="hourly-weather "
                data-testid=""
              >
                <img
                  alt="пасмурно"
                  class="hourly-weather__icon"
                  src="/assets/icons/cloudy.svg"
                />
                <p
                  class="hourly-weather__temperature"
                >
                  -4.4
                  °
                </p>
                <p
                  class="hourly-weather__status"
                >
                  пасмурно
                </p>
              </div>
            </td>
            <td
              class="table__data-cell"
            >
              <div
                class="hourly-weather "
                data-testid=""
              >
                <img
                  alt="пасмурно"
                  class="hourly-weather__icon"
                  src="/assets/icons/cloudy.svg"
                />
                <p
                  class="hourly-weather__temperature"
                >
                  -4.9
                  °
                </p>
                <p
                  class="hourly-weather__status"
                >
                  пасмурно
                </p>
              </div>
            </td>
            <td
              class="table__data-cell"
            >
              <div
                class="hourly-weather "
                data-testid=""
              >
                <img
                  alt="снег"
                  class="hourly-weather__icon"
                  src="/assets/icons/snow.svg"
                />
                <p
                  class="hourly-weather__temperature"
                >
                  -5.3
                  °
                </p>
                <p
                  class="hourly-weather__status"
                >
                  снег
                </p>
              </div>
            </td>
            <td
              class="table__data-cell"
            >
              <div
                class="hourly-weather "
                data-testid=""
              >
                <img
                  alt="снег"
                  class="hourly-weather__icon"
                  src="/assets/icons/snow.svg"
                />
                <p
                  class="hourly-weather__temperature"
                >
                  -5.6
                  °
                </p>
                <p
                  class="hourly-weather__status"
                >
                  снег
                </p>
              </div>
            </td>
            <td
              class="table__data-cell"
            >
              <div
                class="hourly-weather "
                data-testid=""
              >
                <img
                  alt="пасмурно"
                  class="hourly-weather__icon"
                  src="/assets/icons/cloudy.svg"
                />
                <p
                  class="hourly-weather__temperature"
                >
                  -5.8
                  °
                </p>
                <p
                  class="hourly-weather__status"
                >
                  пасмурно
                </p>
              </div>
            </td>
            <td
              class="table__data-cell"
            >
              <div
                class="hourly-weather "
                data-testid=""
              >
                <img
                  alt="пасмурно"
                  class="hourly-weather__icon"
                  src="/assets/icons/cloudy.svg"
                />
                <p
                  class="hourly-weather__temperature"
                >
                  -5.7
                  °
                </p>
                <p
                  class="hourly-weather__status"
                >
                  пасмурно
                </p>
              </div>
            </td>
            <td
              class="table__data-cell"
            >
              <div
                class="hourly-weather "
                data-testid=""
              >
                <img
                  alt="ясно"
                  class="hourly-weather__icon"
                  src="/assets/icons/sunny.svg"
                />
                <p
                  class="hourly-weather__temperature"
                >
                  -5.5
                  °
                </p>
                <p
                  class="hourly-weather__status"
                >
                  ясно
                </p>
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</section>
`;

exports[`HourlyWeatherContainer component tests snapshot with mock error 1`] = `
<section
  class="hourly-weather__section hourly-weather-section test-class"
  data-testid="hourly-weather"
>
  <h2
    class="hourly-weather-section__title sr-only"
  >
    Погода на ближайщие 24 часа
  </h2>
  <div
    class="error-info  "
    data-testid=""
    role="alert"
  >
    <h3
      class="error-info__description"
    >
      Не удалось загрузить данные о погоде на ближайщие 24 часа
    </h3>
  </div>
</section>
`;

exports[`HourlyWeatherContainer component tests snapshot without anything 1`] = `
<section
  class="hourly-weather__section hourly-weather-section test-class"
  data-testid="hourly-weather"
>
  <h2
    class="hourly-weather-section__title sr-only"
  >
    Погода на ближайщие 24 часа
  </h2>
</section>
`;
